--- a/style.css
+++ b/style.css
@@ -534,7 +534,7 @@ main .container .right {
 
 /* ============================ THEME CUSTOMIZATION ======================= */
 .customize-theme {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: transparent;
   width: 100vw;
   height: 100vh;
   position: fixed;
